# ScalableFormation_RAL2024

./: .gitignore  CMakeLists.txt  README.md  expROS2_main.py  expROS_main.py  isolate_problem.py  nebolab_experiment_setup.py  package.xml  pickle_plot.py  pickleplot.py  requirements.txt  sdf_convert.py  sdf_converter.py  sim2D_main.py  spawn_turtlebot.py
control_lib/: cbf_si_v2.py  cbf_single_integrator.py  cbf_single_integrator_2.py  go_to_goal.py
experiment_result/: camerabased_localization.py  pickleplot_journal.py
experiment_result/hsv_checker/: hsv_checker.py
launch/: CCTA_setup.launch.py
models/formation4_enlarging/: model.sdf
models/formation4_shrinking/: model.sdf
models/turtlebot3_enlarge/: model.sdf
scenarios_unicycle/: CCTA2024_Controller.py  CCTA2024_Controller_2.py  CCTA2024_FormationObstacleLidar_scenario.py  CCTA2024_FormationObstacleLidar_scenario_2.py
scenarios_unicycle/saved_pkl/: formation4_exp.yml  formation4_sim.yml
scenarios_unicycle/scenarios/: formation4_enlarging.yml  formation4_exp.yml  formation4_exp_2.yml  formation4_full.yml  formation4_mixed.yml  formation4_shrinking.yml  model.sdf
scripts/: expROS2_main.py  sdf_convert.py  spawn_turtlebot.py
scripts/scenarios_unicycle/: CCTA2024_Controller.py  CCTA2024_FormationObstacleLidar_scenario.py
scripts/scenarios_unicycle/scenarios/: formation4_enlarging.yml  formation4_mixed.yml  output.txt
